# polars-textproc

./: Cargo.toml  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: publish_to_pypi.yml
ccstuff/: __init__.py
polars_textproc/: __init__.py  namespace.py
src/: expressions.rs
src/expressions/: compression.rs  fasttext.rs  minhash.rs  misc.rs  mod.rs  repetition.rs  scrub.rs  tokenize.rs
tests/: test_plugin.py
