[package]
name = "ccstuff"
version = "0.1.0"
edition = "2021"

[lib]
name = "ccstuff"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.19.0", features = ["derive", "dtype-array"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.45.1", features = ["dtype-struct", "dtype-array"], default-features = false }
polars-arrow = { version = "0.45.1" }
regex = { version = "1.11.1" }
fasttext = { version = "0.7.8" }
cached = { version = "0.54.0" }
